# pi_dex

./: .env  .env.example  .gitignore  LICENSE  README.md  cliff.toml  go.mod  go.sum  pi_dex.md  pidex.py  pidex.spec  pyproject.toml  requirements.txt
.github/workflows/: release.yml  test.yml
cmd/pidex/: main.go  setup.go  test.go  uninstall.go  update.go
cmd/pidex-emit/: main.go
cmd/pidex-shutdown/: main.go
config/: config.toml  config.toml.example  custom.toml.example  pidex.conf
configs/: config.toml
deploy/: install.sh  pidex-shutdown.service  pidex.service  uninstall.sh
docs/: Report.md  architecture.md  changelog.md  custom-services.md  decisions.md
internal/cli/: cli.go
internal/config/: config.go  loader.go
internal/core/: bus.go  constants.go  cooldown.go  cooldowns.go  dedup.go  dispatcher.go  event.go  notifier.go
internal/notifier/: notifier.go  telegram.go
internal/parser/: custom.go  journal.go  ssh.go  sudo.go  systemd.go
internal/poller/: cpu.go  disk.go  poller.go  ram.go  temperature.go
internal/pollers/: cpu.go  disk.go  ram.go
internal/source/: docker.go  journal.go  network.go  source.go
internal/sources/: docker.go  ssh.go
internal/testevents/: factory.go  fake.go
pidex/: cli.py  cli_setup.py
pidex/config/: __init__.py  loader.py
pidex/core/: bus.py  constants.py  cooldowns.py  dedup.py  dispatcher.py  event.py
pidex/notifiers/: base.py  telegram.py
pidex/pollers/: base.py  cpu.py  disk.py  ram.py  temperature.py
scripts/: bump_version.sh
tests/: conftest.py  test_bus.py  test_cli_setup.py  test_config_loader.py  test_cooldowns.py  test_cpu_poller.py  test_dedup.py  test_disk_poller.py  test_dispatcher.py  test_event.py  test_ram_poller.py  test_ssh_parser.py  test_sudo_parser.py  test_systemd_parser.py  test_telegram_notifier.py  test_temp_poller.py
(+8 files in other folders)
