[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pidex"
version = "0.1.0"
description = "Event-driven home server watchman for Raspberry Pi and Linux servers"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "requests>=2.28",
    "pyroute2>=0.7",
    "docker>=7.0",
]

[project.scripts]
pidex = "pidex.cli:main"
pidex-shutdown = "pidex.sources.shutdown:main"

[tool.setuptools.packages.find]
include = ["pidex*"]
