[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pidex"
version = "0.1.0"
description = "Event-driven home server watchman for Raspberry Pi and Linux servers"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Shivam Ingale" },
]
keywords = ["monitoring", "telegram", "raspberry-pi", "systemd", "docker", "ssh"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "requests>=2.28",
    "pyroute2>=0.7",
    "docker>=7.0",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/Shivamingale3/pi_dex"
Repository = "https://github.com/Shivamingale3/pi_dex"
Issues = "https://github.com/Shivamingale3/pi_dex/issues"

[project.scripts]
pidex = "pidex.cli:main"
pidex-shutdown = "pidex.sources.shutdown:main"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["pidex*"]
